Aligned the export icon correctly over all browsers
Not only in chrome, but also Firefox and IE

--- a/core/app/assets/stylesheets/facts/user_fact_heading.css.less
+++ b/core/app/assets/stylesheets/facts/user_fact_heading.css.less
@@ -40,6 +40,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  vertical-align: middle;
 }
 
 .top-fact-heading-authority {
@@ -51,7 +52,8 @@
   font-size: 0.9em;
   margin-left: 5px;
   position: relative;
-  top: -1px;
+  top: 1px;
+  vertical-align: middle;
 
   &:hover {
     color: @gray;
